fix:increase letter spacing of title

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 .title {
   text-align: center;
   font-family: "Montserrat";
-  letter-spacing: 0px;
+  letter-spacing: 1px;
   color: #1d1d1d;
   font-weight: bold;
   font-size: 3em;
